...
    <!-- CUSTOMIZE THESE FOR YOUR APP -->

    <string name="app_name">PocketMoodle</string>
    <string name="download_queue_provider_authority">com.amazonaws.mobile.downloader-com.amazon.mysampleapp</string>
    <!-- This can be anything, but it should be unique to the app. -->
    <string name="content_file_provider_authority">com.mysampleapp.fileprovider</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="sign_out">Sign Out</string>
    <string name="home">Home Page</string>
    <string name="add_class">Add Class</string>
    <string name="remove_class">Remove Class</string>
    <string name="documents">Documents</string>
    <string name="click_to_upload_document">Click To Upload Document</string>
    <string name="class_to_remove">Choose the class you want to remove</string>
    <string name="default_status">Status: No Files Selected</string>
    <string name="upload_document">Upload Document</string>
    <string name="class_list">Class List</string>
...
    <string name="hint_send_message">Type Message</string>
    <string name="send_message">Send</string>
    <string name="discussion_board">Discussion Board</string>
    <string name="open_discussion_board">Open Discussion Board</string>
    <string name="announcement">Announcement</string>
    <string name="add_announcement">Add Announcement</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_description">Enter Description</string>
    <string name="grades">Grades</string>

    <!-- REQUIRED FOR GENERAL APP FUNCTIONALITY - YOU MAY WANT TO KEEP THESE -->
...
